test/test_results.txt
test_api_integration (unittest.loader._FailedTest.test_api_integration) ... ERROR
test_commit_message_router (unittest.loader._FailedTest.test_commit_message_router) ... ERROR
test_commits_router (unittest.loader._FailedTest.test_commits_router) ... ERROR
test_insights_router (unittest.loader._FailedTest.test_insights_router) ... ERROR
test_repo_router (unittest.loader._FailedTest.test_repo_router) ... ERROR
test_summary_router (unittest.loader._FailedTest.test_summary_router) ... ERROR
test_user_router (unittest.loader._FailedTest.test_user_router) ... ERROR

======================================================================
ERROR: test_api_integration (unittest.loader._FailedTest.test_api_integration)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_api_integration
Traceback (most recent call last):
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 407, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 350, in _get_module_from_name
    __import__(name)
  File "D:\Program File\code\SoftWare engineering\csci3100_group_proj_backend\test\APIRouter\test_api_integration.py", line 3, in <module>
    from main import app
ModuleNotFoundError: No module named 'main'


======================================================================
ERROR: test_commit_message_router (unittest.loader._FailedTest.test_commit_message_router)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_commit_message_router
Traceback (most recent call last):
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 407, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 350, in _get_module_from_name
    __import__(name)
  File "D:\Program File\code\SoftWare engineering\csci3100_group_proj_backend\test\APIRouter\test_commit_message_router.py", line 3, in <module>
    from router.commit_message_router import router
ModuleNotFoundError: No module named 'router'


======================================================================
ERROR: test_commits_router (unittest.loader._FailedTest.test_commits_router)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_commits_router
Traceback (most recent call last):
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 407, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 350, in _get_module_from_name
    __import__(name)
  File "D:\Program File\code\SoftWare engineering\csci3100_group_proj_backend\test\APIRouter\test_commits_router.py", line 3, in <module>
    from router.commits_router import router
ModuleNotFoundError: No module named 'router'


======================================================================
ERROR: test_insights_router (unittest.loader._FailedTest.test_insights_router)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_insights_router
Traceback (most recent call last):
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 407, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 350, in _get_module_from_name
    __import__(name)
  File "D:\Program File\code\SoftWare engineering\csci3100_group_proj_backend\test\APIRouter\test_insights_router.py", line 3, in <module>
    from router.insights_router import router
ModuleNotFoundError: No module named 'router'


======================================================================
ERROR: test_repo_router (unittest.loader._FailedTest.test_repo_router)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_repo_router
Traceback (most recent call last):
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 407, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 350, in _get_module_from_name
    __import__(name)
  File "D:\Program File\code\SoftWare engineering\csci3100_group_proj_backend\test\APIRouter\test_repo_router.py", line 3, in <module>
    from router.repo_router import router
ModuleNotFoundError: No module named 'router'


======================================================================
ERROR: test_summary_router (unittest.loader._FailedTest.test_summary_router)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_summary_router
Traceback (most recent call last):
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 407, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 350, in _get_module_from_name
    __import__(name)
  File "D:\Program File\code\SoftWare engineering\csci3100_group_proj_backend\test\APIRouter\test_summary_router.py", line 3, in <module>
    from router.summary_router import router
ModuleNotFoundError: No module named 'router'


======================================================================
ERROR: test_user_router (unittest.loader._FailedTest.test_user_router)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_user_router
Traceback (most recent call last):
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 407, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\lenovo\AppData\Local\Programs\Python\Python311\Lib\unittest\loader.py", line 350, in _get_module_from_name
    __import__(name)
  File "D:\Program File\code\SoftWare engineering\csci3100_group_proj_backend\test\APIRouter\test_user_router.py", line 3, in <module>
    from router.user_router import router
ModuleNotFoundError: No module named 'router'


----------------------------------------------------------------------
Ran 7 tests in 0.001s

FAILED (errors=7)
